tests/neg-custom-args/captures/box-adapt-typefun.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/box-adapt-typefun.scala:6:27 -----------------------------
6 |  val op: Op[Cap^{io}] = Op(f) // error
  |                         ^^^^^
  |                         Found:    Op[Cap^'s1]^'s2
  |                         Required: Op[Cap^{io}]
  |
  |                         Note that capability `io` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/box-adapt-typefun.scala:12:42 ----------------------------
12 |  val test: [T] -> Unit -> (Cap^{io}) = f.value // error
   |                                        ^^^^^^^
   |                                        Found:    [T] => ((x$1: Unit): Cap^{io})^{io}
   |                                        Required: [T] => (x$1: Unit) -> Cap^{io}
   |
   |                                        Note that capability `io` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
